# nuprop

./: .dockerignore  .gitignore  Dockerfile  NUPROP_DOCUMENTATION.md  docker-compose.yml  fly.toml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5d95cb487ab3_initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py  seed.py  ws_manager.py
backend/app/domain/schemas/: agency_schemas.py  analytics_schemas.py  auth_schemas.py  chat_schemas.py  client_schemas.py  connector_schemas.py  notification_schemas.py  proposal_schemas.py  rate_card_schemas.py  template_schemas.py
backend/app/infrastructure/db/: database.py
backend/app/proposal_site_themes/: _base.html
backend/app/proposal_site_themes/bold/: index.html
backend/app/proposal_site_themes/dark/: index.html
backend/app/proposal_site_themes/editorial/: index.html
backend/app/proposal_site_themes/minimal/: index.html
backend/app/proposal_site_themes/warm/: index.html
backend/app/services/: context_intelligence.py  context_service.py  document_generator.py  engagement_scorer.py  notification_engine.py  site_generator.py
backend/app/services/ai/: benchmark_agent.py  (+6 more)
backend/app/viewmodels/: agency_viewmodel.py  analytics_viewmodel.py  auth_viewmodel.py  chat_viewmodel.py  client_viewmodel.py  connector_viewmodel.py  notification_viewmodel.py  proposal_viewmodel.py  rate_card_viewmodel.py  template_viewmodel.py
backend/outputs/23075ad0-d89e-4ff1-b2a6-3e2f54105f42/: email-drafts.md  proposal-print.html  proposal.docx
(+107 files in other folders)
