[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "anthropic>=0.89.0",
    "asyncpg>=0.31.0",
    "boto3>=1.42.84",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-docx>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.24",
    "redis>=7.4.0",
    "resend>=2.27.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.44.0",
    "email-validator>=2.3.0",
    "bcrypt>=5.0.0",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
